Fixed default image being mine
changed default image to one in examples instead of one I added

--- a/working_quick_demo_of_makeittalk_07_2023.ipynb
+++ b/working_quick_demo_of_makeittalk_07_2023.ipynb
@@ -49,7 +49,7 @@
         "import subprocess\n",
         "print(subprocess.getoutput('nvidia-smi'))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
       "source": [
         "print(subprocess.getoutput('ffmpeg'))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
       "source": [
         "!git clone https://github.com/yzhou359/MakeItTalk"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
         "!pip install -r requirements.txt\n",
         "!pip install tensorboardX"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +355,7 @@
         "!gdown -O examples/ckpt/ckpt_116_i2i_comb.pth https://drive.google.com/uc?id=1i2LJXKp-yWKIEEgJ7C6cE3_2NirfY_0a\n",
         "!gdown -O examples/dump/emb.pickle https://drive.google.com/uc?id=18-0CYl5E6ungS3H4rRSHjfYvvm-WwjTI"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +433,7 @@
         "from scipy.signal import savgol_filter\n",
         "from src.approaches.train_audio2landmark import Audio2landmark_model"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -458,7 +458,7 @@
         "AMP_LIP_SHAPE_Y = 2.                 # amplify the lip motion in vertical direction\n",
         "AMP_HEAD_POSE_MOTION = 0.7           # amplify the head pose motion (usually smaller than 1.0, put it to 0. for a static head pose)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +467,7 @@
       "metadata": {
         "id": "OSDgOV4bUDM0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +522,7 @@
         "\n",
         "opt_parser = parser.parse_args()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +555,7 @@
       "source": [
         "import face_alignment\n",
         "from skimage import io\n",
-        "img =cv2.imread('examples/' + 'ian.jpg')\n",
+        "img =cv2.imread('examples/' + 'donald.jpg')\n",
         "predictor = face_alignment.FaceAlignment(face_alignment.LandmarksType.THREE_D, device='cpu', flip_input=True)\n",
         "shapes = predictor.get_landmarks(img)\n",
         "if (not shapes or len(shapes) != 1):\n",
@@ -566,7 +566,7 @@
         "if(opt_parser.close_input_face_mouth):\n",
         "    util.close_input_face_mouth(shape_3d)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,7 +606,7 @@
         "shape_3d[[37,38,43,44], 1] -=2.    # larger eyes\n",
         "shape_3d[[40,41,46,47], 1] +=2.    # larger eyes"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -626,7 +626,7 @@
       "source": [
         "shape_3d, scale, shift = util.norm_input_face(shape_3d)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -641,7 +641,7 @@
         },
         "outputId": "8bde71f7-6149-4081-f501-11457ed64ae2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -776,7 +776,7 @@
         "    gaze = {'rot_trans':rot_tran, 'rot_quat':rot_quat, 'anchor_t_shape':anchor_t_shape}\n",
         "    pickle.dump(gaze, fp)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -828,7 +828,7 @@
         "else:\n",
         "    model.test(au_emb=None)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -972,7 +972,7 @@
         "        print('finish image2image gen')\n",
         "    os.remove(os.path.join('examples', fls[i]))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
         "  </video>\n",
         "  \"\"\" % data_url))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
